// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmarks renders correctly with bookmarks 1`] = `
<div
  css={
    Object {
      "map": undefined,
      "name": "vkixka",
      "next": undefined,
      "styles": "
        height: 100vh;
        display: flex;
        flex-direction: column;
      ",
    }
  }
>
  <header
    css={
      Object {
        "map": undefined,
        "name": "gw0q2y",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, rgb(0,61,89), #33637a);
  ;
        display: flex;
        flex-direction: column;
        align-items: center;
      ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "19nu28a",
          "next": undefined,
          "styles": "
            display: flex;
            width: 100%;
            max-width: 800px;
          ",
        }
      }
    >
      <div
        className="Header-Title-Style"
        css={
          Object {
            "map": undefined,
            "name": "17ih1bc",
            "next": undefined,
            "styles": "
              
    display: flex;
    justify-content: center;
    flex-direction: column;
  
              
    padding: 15px;
  
              flex-grow: 1;
            ",
          }
        }
        onClick={[Function]}
      >
        Self Help Facility
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1dbjmka",
              "next": undefined,
              "styles": "
                  font-size: 19px;
                ",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        Menu
      </div>
    </div>
  </header>
  <div
    css={
      Object {
        "map": undefined,
        "name": "1tuxxlm",
        "next": undefined,
        "styles": "
          overflow: scroll;
          width: 100vw;
          display: flex;
          flex-direction: column;
          flex-grow: 1;
          align-items: center;
        ",
      }
    }
  >
    <main
      css={
        Object {
          "map": undefined,
          "name": "azpgwp",
          "next": undefined,
          "styles": "
            flex-grow: 1;
            width: 100%;
            max-width: 800px;
          ",
        }
      }
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "ypl6yy",
            "next": undefined,
            "styles": "
        border-bottom: 1px rgb(229, 229, 234) solid;
        padding: 15px 0px;
      ",
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17k9f9t",
              "next": undefined,
              "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        border-radius: 4px;
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        margin: 0px 15px;
        text-align: center;
        height: 50px;
        background-color: rgb(255, 255, 255);
        
      ",
            }
          }
          data-testid="large-button"
          onClick={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dj94zy",
                "next": undefined,
                "styles": "
            font-size: 19px;
            position: relative;
            left: 10px;
            color: rgb(0,61,89);
          ",
              }
            }
            data-testid="large-button-icon"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1wo7hj",
                  "next": undefined,
                  "styles": "
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-book fa-w-14 "
                data-icon="book"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Button-heading-Style"
            css={
              Object {
                "map": undefined,
                "name": "7tk8ru",
                "next": undefined,
                "styles": "
          margin: 0px 20px;
          color: rgb(0,61,89);
        ",
              }
            }
            data-testid="large-button-text"
          >
            Explore Content
          </div>
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "12ew49b",
            "next": undefined,
            "styles": "
        
    padding: 5px 15px;
  
      ",
          }
        }
      >
        <h1
          className="Article-Title-Style"
          css={
            Object {
              "map": undefined,
              "name": "1xcgh0k",
              "next": undefined,
              "styles": "
          margin-bottom: 0px;
          display: flex;
        ",
            }
          }
          data-testid="search-result-title"
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "8x4dpy",
                "next": undefined,
                "styles": "
              font-size: 19px;
              margin: 5px 20px 0px 2px;
            ",
              }
            }
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bookmark fa-w-12 "
              data-icon="bookmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          My Bookmarks
        </h1>
      </div>
      <div
        className="Article-body-Style"
        css={
          Object {
            "map": undefined,
            "name": "bsbyq4",
            "next": undefined,
            "styles": "
        
    padding: 5px 15px;
  ;
        margin-bottom: 20px;
      ",
          }
        }
      >
        Bookmarks are links to articles, which will appear here for you to quickly find the article again. To remove a bookmark, tap on the bookmark button in the article. Bookmarks are stored on your device, and are linked to your account, so only you have access to them.
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "1p7jpnp",
            "next": undefined,
            "styles": "
        
    padding: 15px 0px;
  ;
      ",
          }
        }
      >
        <div>
          <div
            css={
              Object {
                "map": undefined,
                "name": "lcxyxv",
                "next": undefined,
                "styles": "
        
    padding: 15px;
    min-height: 30px;
  ;
        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
        border-left: 6px solid rgb(0,61,89);
        background-color: rgb(255, 255, 255);
      ",
              }
            }
            onClick={[Function]}
          >
            <div
              className="Card-heading-Style"
              css={
                Object {
                  "map": undefined,
                  "name": "qiy98z",
                  "next": undefined,
                  "styles": "
          color: inherit;
          flex-grow: 1;
          font-weight: semi-bold;
        ",
                }
              }
              data-testid="articletab-article-card"
            >
              test Article 1
            </div>
            <div
              className="Card-sub-head-Style-gray"
              css={
                Object {
                  "map": undefined,
                  "name": "1hejrb1",
                  "next": undefined,
                  "styles": "
          padding-top: 6px;
          display: flex;
          flex-direction: vertical;
          line-height: 1.08;
          max-height: 42.12px; // line-height * font-size * 3
        ",
                }
              }
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "lz6rtp",
                    "next": undefined,
                    "styles": "
            width: 70%;
            overflow: hidden;
            text-overflow: ellipsis;
            flex-grow: 1;
          ",
                  }
                }
              >
                testDescription
              </div>
              <div
                className="Card-meta-Style"
                css={
                  Object {
                    "map": undefined,
                    "name": "4j3tb8",
                    "next": undefined,
                    "styles": "
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
          ",
                  }
                }
              >
                a few seconds ago
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "d1qmp1",
            "next": undefined,
            "styles": "
        padding: 15px 0px;
      ",
          }
        }
      >
        <div
          className="Button-subhead-Style"
          css={
            Object {
              "map": undefined,
              "name": "1dmo2ca",
              "next": undefined,
              "styles": "
          display: flex;
          
    padding: 5px 15px;
  
        ",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1k0aln6",
                "next": undefined,
                "styles": "
            flex-grow: 1;
          ",
              }
            }
            data-testid="pagination-element-showing"
          >
            Showing 
            1
            -
            1
             of 
            1
          </div>
          <div>
            Show 
            5
             per page
          </div>
        </div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "1sf84gv",
              "next": undefined,
              "styles": "
          display: flex;
          justify-content: center;
        ",
            }
          }
        >
          <div
            className="Article-Title-Style"
            css={
              Object {
                "map": undefined,
                "name": "1j335gw",
                "next": undefined,
                "styles": "
        padding: 0px 5px;
        text-decoration: underline;
      ",
              }
            }
            data-testid="pagination-1-button"
            onClick={[Function]}
          >
            1
          </div>
        </div>
      </div>
    </main>
    <div
      css={
        Object {
          "map": undefined,
          "name": "ej75ms",
          "next": undefined,
          "styles": "
        
    padding: 30px 0px;
  
        width: 100%;
        padding: 10px 0px;
        background-color: rgb(236, 236, 237);
        display: flex;
        min-height: 100px;
        flex-direction: column;
        justify-content: center;
        flex-shrink: 0;
      ",
        }
      }
    >
      <img
        alt="Footer logo"
        css={
          Object {
            "map": undefined,
            "name": "1v6eegl",
            "next": undefined,
            "styles": "
          margin-bottom: 50px;
          margin-top: 50px;
        ",
          }
        }
        src="/footer_logo.svg"
      />
      <div
        className="Footer-Style"
      >
        © Office for National Statistics 2019
      </div>
    </div>
  </div>
</div>
`;

exports[`Bookmarks renders correctly without bookmarks 1`] = `
<div
  css={
    Object {
      "map": undefined,
      "name": "vkixka",
      "next": undefined,
      "styles": "
        height: 100vh;
        display: flex;
        flex-direction: column;
      ",
    }
  }
>
  <header
    css={
      Object {
        "map": undefined,
        "name": "gw0q2y",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, rgb(0,61,89), #33637a);
  ;
        display: flex;
        flex-direction: column;
        align-items: center;
      ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "19nu28a",
          "next": undefined,
          "styles": "
            display: flex;
            width: 100%;
            max-width: 800px;
          ",
        }
      }
    >
      <div
        className="Header-Title-Style"
        css={
          Object {
            "map": undefined,
            "name": "17ih1bc",
            "next": undefined,
            "styles": "
              
    display: flex;
    justify-content: center;
    flex-direction: column;
  
              
    padding: 15px;
  
              flex-grow: 1;
            ",
          }
        }
        onClick={[Function]}
      >
        Self Help Facility
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1dbjmka",
              "next": undefined,
              "styles": "
                  font-size: 19px;
                ",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        Menu
      </div>
    </div>
  </header>
  <div
    css={
      Object {
        "map": undefined,
        "name": "1tuxxlm",
        "next": undefined,
        "styles": "
          overflow: scroll;
          width: 100vw;
          display: flex;
          flex-direction: column;
          flex-grow: 1;
          align-items: center;
        ",
      }
    }
  >
    <main
      css={
        Object {
          "map": undefined,
          "name": "azpgwp",
          "next": undefined,
          "styles": "
            flex-grow: 1;
            width: 100%;
            max-width: 800px;
          ",
        }
      }
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "ypl6yy",
            "next": undefined,
            "styles": "
        border-bottom: 1px rgb(229, 229, 234) solid;
        padding: 15px 0px;
      ",
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17k9f9t",
              "next": undefined,
              "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        border-radius: 4px;
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        margin: 0px 15px;
        text-align: center;
        height: 50px;
        background-color: rgb(255, 255, 255);
        
      ",
            }
          }
          data-testid="large-button"
          onClick={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dj94zy",
                "next": undefined,
                "styles": "
            font-size: 19px;
            position: relative;
            left: 10px;
            color: rgb(0,61,89);
          ",
              }
            }
            data-testid="large-button-icon"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1wo7hj",
                  "next": undefined,
                  "styles": "
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-book fa-w-14 "
                data-icon="book"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Button-heading-Style"
            css={
              Object {
                "map": undefined,
                "name": "7tk8ru",
                "next": undefined,
                "styles": "
          margin: 0px 20px;
          color: rgb(0,61,89);
        ",
              }
            }
            data-testid="large-button-text"
          >
            Explore Content
          </div>
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "12ew49b",
            "next": undefined,
            "styles": "
        
    padding: 5px 15px;
  
      ",
          }
        }
      >
        <h1
          className="Article-Title-Style"
          css={
            Object {
              "map": undefined,
              "name": "1xcgh0k",
              "next": undefined,
              "styles": "
          margin-bottom: 0px;
          display: flex;
        ",
            }
          }
          data-testid="search-result-title"
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "8x4dpy",
                "next": undefined,
                "styles": "
              font-size: 19px;
              margin: 5px 20px 0px 2px;
            ",
              }
            }
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bookmark fa-w-12 "
              data-icon="bookmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          My Bookmarks
        </h1>
      </div>
      <div
        className="Article-body-Style"
        css={
          Object {
            "map": undefined,
            "name": "bsbyq4",
            "next": undefined,
            "styles": "
        
    padding: 5px 15px;
  ;
        margin-bottom: 20px;
      ",
          }
        }
      >
        Bookmarks are links to articles, which will appear here for you to quickly find the article again. To remove a bookmark, tap on the bookmark button in the article. Bookmarks are stored on your device, and are linked to your account, so only you have access to them.
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "bn78dc",
            "next": undefined,
            "styles": "
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        background-color: rgb(255, 255, 255);
        height: 74px;
        display: flex;
        align-items: center;
        justify-content: center;
      ",
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1w87xe6",
              "next": undefined,
              "styles": "
          color: rgb(0,61,89);
          
    display: flex;
    justify-content: center;
    flex-direction: column;
  
          font-size: 30px;
          flex: 1 1 0;
          align-items: center;
          padding: 0px 5px;
        ",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-bookmark fa-w-12 "
            data-icon="bookmark"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "sj34c4",
              "next": undefined,
              "styles": "
          
    display: flex;
    justify-content: center;
    flex-direction: column;
  
          text-align: center;
        ",
            }
          }
        >
          <div
            className="Card-heading-Style"
            css={
              Object {
                "map": undefined,
                "name": "2e2jvx",
                "next": undefined,
                "styles": "
            margin-bottom: 5px;
          ",
              }
            }
          >
            Bookmarks will show here
          </div>
          <div
            className="Card-sub-head-Style-gray"
          >
            Bookmarks are stored on your device
          </div>
        </div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "531ogy",
              "next": undefined,
              "styles": "
          flex: 1 1 0;
        ",
            }
          }
        />
      </div>
    </main>
    <div
      css={
        Object {
          "map": undefined,
          "name": "ej75ms",
          "next": undefined,
          "styles": "
        
    padding: 30px 0px;
  
        width: 100%;
        padding: 10px 0px;
        background-color: rgb(236, 236, 237);
        display: flex;
        min-height: 100px;
        flex-direction: column;
        justify-content: center;
        flex-shrink: 0;
      ",
        }
      }
    >
      <img
        alt="Footer logo"
        css={
          Object {
            "map": undefined,
            "name": "1v6eegl",
            "next": undefined,
            "styles": "
          margin-bottom: 50px;
          margin-top: 50px;
        ",
          }
        }
        src="/footer_logo.svg"
      />
      <div
        className="Footer-Style"
      >
        © Office for National Statistics 2019
      </div>
    </div>
  </div>
</div>
`;
